--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,16 @@
 /* Buntastic CSS */
+/*
+    selector {
+      property: foo;
+    }
+    .class
+    #id
+    multiple , p - use comma
+    child p - no comma
+*/
+
+/*https://material.io/color/#!/?view.left=0&view.right=0&primary.color=424242&secondary.color=FBC02D*/
+
 
 
 /* Main html Tags */
@@ -18,6 +30,8 @@
     footer{
       font-size: 0.8em;
       margin: auto;
+      text-align: center;
+
     }
     h1 {
       font-size: 1.4em;
