--- a/styles.css
+++ b/styles.css
@@ -26,14 +26,20 @@
     p {
       font-size: 14px;
     }
-
+    a {
+      color: black;
+    }
+    a:hover{
+      color: white;
+      background-color:black;
+    }
     header{
       font-size: 20px;
       text-align: center;
     }
     header #logo {
       margin: 0 auto;
-    }
+    } 
 
 /*    Menu    */
     header, nav{
@@ -94,30 +100,59 @@
     .bun_list {
       font-size: 12pt;
     }
-    .bun_row {
+    .bun_row{
       width: 100%;
       float: left;
-      overflow: auto;
+      display: inline-block;
     }
     .a_bun{
-      background-color: lightblue;
       float: left;
-      overflow: auto;
+      max-width: 300px;
       border-top: 60px;
       border: 10px;
       margin: 10px;
       width: 30%;
+      text-align: center;
+      text-decoration: none;
+    }
+    .a_bun a{
+      text-decoration: none;
+    }
+    .a_bun:hover{
+      outline: outset 6px;
+      outline-color: black;
+      outline-style: all;
+    }
+    #single_bun_img{
+      width: 50%;
+      display: inline-block;
+      margin: 0 auto;
+      text-align: center;
+    }
+    #single_bun_img img{
+      margin: 0 auto;
+    }
+    #single_bun_desc{
+      display: inline-block;
+      text-align: center;
+      width: 48%;
     }
 
 /*    Footer   */
-
-    #copyright{
+    footer{
       margin: 50px auto;
       border-top: 2px solid #000;
       height: 25px;
-      color: black;
+      height: auto;
       text-align: center;
       padding: 0px 64px;
       padding-top: 0px;
+    }
+    footer img{
+      width: 100px;
+      height: auto;
+    }
+    #copyright{
+      color: black;
     }
 
